@@ -30,6 +30,7 @@
  *                                                                        *
  **************************************************************************/
 
+#include <iomanip>
 #include "../pybind11/pybind11.h"
 #include "../pybind11/operators.h"
 #include "hypersurface/hypercoords.h"
@@ -59,6 +60,18 @@ void addHyperCoords(pybind11::module_& m) {
         .def("intValue", &HyperEncoding::intValue)
         .def_static("fromIntValue", &HyperEncoding::fromIntValue)
         .def(pybind11::self + pybind11::self)
+        .def("__str__", [](HyperEncoding e) {
+            std::ostringstream out;
+            out << "0x" << std::hex << std::setw(4) << std::setfill('0')
+                << e.intValue();
+            return out.str();
+        })
+        .def("__repr__", [](HyperEncoding e) {
+            std::ostringstream out;
+            out << "<regina.HyperEncoding: 0x" << std::hex << std::setw(4)
+                << std::setfill('0') << e.intValue() << '>';
+            return out.str();
+        })
         ;
     regina::python::add_eq_operators(e);
 
