@@ -102,6 +102,7 @@ void addSFSpace(pybind11::module_& m) {
             pybind11::arg("mayReflect") = true)
         .def("isLensSpace", &SFSpace::isLensSpace)
     ;
+    regina::python::add_output(s);
     // The SFSpace subclass defines its own equality tests, so we
     // should not just inherit the compare-by-pointer test from Manifold.
     regina::python::add_eq_operators(s);
